# scomp_link

./: .coverage.CHLT3XN0TKJQR.pid88989.XoeRLE0x.HNQIp837rWOh  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  AGENT_INTEGRATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  VERSION_REQUIREMENTS.md  WORKFLOW.md  ai-catalog.json  codecov.yml  cursor-plugin.json  index.html  llms.txt  mcp.json  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  requirements.txt  run_all_examples.sh  run_tox_all_versions.sh  server.json  setup.py  sitemap.xml  smithery.yaml  tox.ini
.cursor-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  hf-space.yml  mcp-registry.yml  pages.yml  release.yml  smithery-publish.yml
.well-known/: mcp.json
.well-known/mcp/: server-card.json
API_REFERENCE/: index.html
agent-integration/: index.html
api/explainability/: index.html
api/models/: index.html
api/monitoring/: index.html
api/persistence/: index.html
api/pipeline/: index.html
api/preprocessing/: index.html
api/tuning/: index.html
api/validation/: index.html
api/visualization/: index.html
changelog/: index.html
cli/: index.html
comparison/: index.html
demo/: index.html
docs/: API_REFERENCE.md  agent-integration.md  changelog.md  cli.md  comparison.md  examples.md  index.md  quickstart.md  report-builder-guide.md
docs/api/: explainability.md  models.md  monitoring.md  persistence.md  pipeline.md  preprocessing.md  tuning.md  validation.md  visualization.md
docs/demo/: demo.cast  index.html  report.html  terminal.html
examples/: README.md  contrastive_text_example.py  example_01_numerical_small.py  example_02_numerical_medium_lasso.py  example_03_numerical_mixed_features.py  example_04_classification_small.py  example_05_classification_large.py  example_06_clustering_known.py  example_07_clustering_unknown.py  example_08_numerical_very_large.py  example_09_text_classification.py  example_10_image_classification.py  example_11_image_clustering.py  example_12_text_configuration.py  example_13_text_unsupervised.py  example_14_ensemble_advanced_cv.py  example_15_anomaly_detection.py  example_16_ts_anomaly_detection.py  example_17_report_html.py  example_18_contrastive_text_example.py  example_19_explainability.py  example_19_rawgraphs.py  example_20_advanced_tuning.py  example_21_drift_detection.py  example_22_pipeline_persistence.py  example_23_feature_engineering.py  example_24_time_series_forecasting.py  example_25_fairness_metrics.py  example_26_data_quality.py  example_27_regressor_optimizer.py  example_28_classifier_optimizer.py  example_29_validation_advanced_cv.py  example_30_core_advanced_pipeline.py  example_31_cli_programmatic.py  example_32_highcharts_report.py  example_33_supervised_text.py  example_34_unsupervised_text.py  example_contrastive_pipeline.py  index.html
hf-space/: Dockerfile  README.md  app.py
mcpb/: manifest.json  pyproject.toml
mcpb/server/: main.py
models/text_classifier/: embeddings.csv  metadata.json
quickstart/: index.html
requirements/: requirements-dev.txt  requirements-img-py310.txt  requirements-img-py311.txt  requirements-img-py312.txt  requirements-img-py313.txt  requirements-img-py37.txt  requirements-img-py38.txt  requirements-img-py39.txt  requirements-nlp-py310.txt  requirements-nlp-py311.txt  requirements-nlp-py312.txt  requirements-nlp-py313.txt  requirements-nlp-py37.txt  requirements-nlp-py38.txt  requirements-nlp-py39.txt  requirements-py310.txt  requirements-py311.txt  requirements-py312.txt  requirements-py313.txt  requirements-py37.txt  requirements-py38.txt  requirements-py39.txt  requirements-utils.txt
scomp_link/: __init__.py  cli.py  config.py  core.py  mcp_server.py
scomp_link/explainability/: README.md  __init__.py  explainer.py
scomp_link/models/: README.md  README_ENSEMBLE.md  __init__.py  advanced_tuning.py  anomaly_detector.py  classifier_optimizer.py  contrastive_net.py  contrastive_text.py  ensemble_optimizer.py  forecaster.py  model_factory.py  regressor_optimizer.py  supervised_img.py  supervised_text.py  ts_anomaly_detector.py  unsupervised_img.py  unsupervised_text.py
scomp_link/monitoring/: README.md  __init__.py  drift_detector.py
scomp_link/persistence/: README.md  __init__.py  artifact.py
scomp_link/preprocessing/: README.md  data_processor.py  data_quality.py  feature_engineer.py
scomp_link/utils/: README.md  colors.py  decorators.py  highcharts.py  logger.py  pdf_converter.py  plotly_utils.py  report_html.py
scomp_link/utils/rawgraphs/: README.md  __init__.py  comparisons.py  correlations.py  distributions.py  hierarchies.py  networks.py  time_series.py
scomp_link/validation/: README.md  __init__.py  advanced_cv.py  fairness.py  model_validator.py
scripts/: bump_version.py  publish-smithery.sh  record_demo.sh
search/: search_index.json
skills/scomp-link/: SKILL.md
skills/scomp-link/assets/: pipeline-template.yaml
skills/scomp-link/configs/: claude-desktop.json  cursor-mcp.json  kiro-mcp.json  vscode-mcp.json
skills/scomp-link/references/: api-reference.md  cli-reference.md  visualization-guide.md  workflow-patterns.md
tests/: README.md  test_all.py  test_cli.py  test_cli_new.py  test_contrastive_text.py  test_coverage_boost.py  test_ensemble_advanced_cv.py  test_examples_coverage.py  test_legacy_modules.py  test_mcp_server.py  test_new_modules.py  test_new_modules_2.py  test_rawgraphs.py  test_report_builder.py  test_serve.py  test_supervised_text.py
visualization/: index.html
