[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scomp-link"
version = "0.1.0"
description = "The Astromech arm for your Python data projects — end-to-end ML toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Saccaggi Giacomo", email = "giacomo.saccaggi@gmail.com"}
]
maintainers = [
    {name = "Saccaggi Giacomo", email = "giacomo.saccaggi@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "machine-learning",
    "data-science",
    "automation",
    "pipeline",
    "scikit-learn",
    "regression",
    "classification",
    "clustering",
]

# ── Core dependencies with environment markers per Python version ──

dependencies = [
    # --- numpy ---
    "numpy>=1.16.0,<1.22.0;   python_version < '3.8'",
    "numpy>=1.20.0,<1.25.0;   python_version >= '3.8'  and python_version < '3.9'",
    "numpy>=1.21.0,<1.27.0;   python_version >= '3.9'  and python_version < '3.10'",
    "numpy>=1.22.0,<1.27.0;   python_version >= '3.10' and python_version < '3.11'",
    "numpy>=1.24.0,<1.27.0;   python_version >= '3.11' and python_version < '3.12'",
    "numpy>=1.26.0,<2.0.0;    python_version >= '3.12' and python_version < '3.13'",
    "numpy>=1.26.0,<3.0.0;    python_version >= '3.13'",

    # --- pandas ---
    "pandas>=1.0.0,<1.4.0;    python_version < '3.8'",
    "pandas>=1.3.0,<1.6.0;    python_version >= '3.8'  and python_version < '3.9'",
    "pandas>=1.4.0,<2.1.0;    python_version >= '3.9'  and python_version < '3.10'",
    "pandas>=1.4.0,<2.2.0;    python_version >= '3.10' and python_version < '3.11'",
    "pandas>=2.0.0,<2.2.0;    python_version >= '3.11' and python_version < '3.12'",
    "pandas>=2.1.0,<2.3.0;    python_version >= '3.12' and python_version < '3.13'",
    "pandas>=2.1.0,<3.0.0;    python_version >= '3.13'",

    # --- scipy ---
    "scipy>=1.3.0,<1.8.0;     python_version < '3.8'",
    "scipy>=1.5.0,<1.10.0;    python_version >= '3.8'  and python_version < '3.9'",
    "scipy>=1.7.0,<1.12.0;    python_version >= '3.9'  and python_version < '3.10'",
    "scipy>=1.8.0,<1.12.0;    python_version >= '3.10' and python_version < '3.11'",
    "scipy>=1.10.0,<1.12.0;   python_version >= '3.11' and python_version < '3.12'",
    "scipy>=1.11.0,<1.14.0;   python_version >= '3.12' and python_version < '3.13'",
    "scipy>=1.11.0,<2.0.0;    python_version >= '3.13'",

    # --- scikit-learn ---
    "scikit-learn>=0.22.0,<1.1.0;  python_version < '3.8'",
    "scikit-learn>=1.0.0,<1.3.0;   python_version >= '3.8'  and python_version < '3.9'",
    "scikit-learn>=1.1.0,<1.4.0;   python_version >= '3.9'  and python_version < '3.10'",
    "scikit-learn>=1.2.0,<1.4.0;   python_version >= '3.10' and python_version < '3.11'",
    "scikit-learn>=1.3.0,<1.5.0;   python_version >= '3.11' and python_version < '3.12'",
    "scikit-learn>=1.3.0,<1.6.0;   python_version >= '3.12' and python_version < '3.13'",
    "scikit-learn>=1.3.0,<2.0.0;   python_version >= '3.13'",

    # --- matplotlib ---
    "matplotlib>=3.0.0,<3.6.0;    python_version < '3.8'",
    "matplotlib>=3.3.0,<3.8.0;    python_version >= '3.8'  and python_version < '3.9'",
    "matplotlib>=3.5.0,<3.9.0;    python_version >= '3.9'  and python_version < '3.10'",
    "matplotlib>=3.6.0,<3.9.0;    python_version >= '3.10' and python_version < '3.11'",
    "matplotlib>=3.7.0,<3.9.0;    python_version >= '3.11' and python_version < '3.12'",
    "matplotlib>=3.8.0,<3.10.0;   python_version >= '3.12' and python_version < '3.13'",
    "matplotlib>=3.8.0,<4.0.0;    python_version >= '3.13'",

    # --- plotly ---
    "plotly>=4.0.0,<5.15.0;   python_version < '3.8'",
    "plotly>=5.0.0,<6.0.0;    python_version >= '3.8'",

    # --- boruta ---
    "boruta>=0.3",

    # --- seaborn ---
    "seaborn>=0.11.0,<0.14.0",
]

# ── Optional dependency groups ──

[project.optional-dependencies]

# NLP: torch, transformers, spacy, faiss
nlp = [
    "torch>=1.9.0,<1.14.0;        python_version < '3.8'",
    "torch>=1.10.0,<2.1.0;        python_version >= '3.8'  and python_version < '3.9'",
    "torch>=1.12.0,<2.2.0;        python_version >= '3.9'  and python_version < '3.10'",
    "torch>=1.13.0,<2.3.0;        python_version >= '3.10' and python_version < '3.11'",
    "torch>=2.0.0,<2.4.0;         python_version >= '3.11' and python_version < '3.12'",
    "torch>=2.0.0,<2.5.0;         python_version >= '3.12' and python_version < '3.13'",
    "torch>=2.0.0,<3.0.0;         python_version >= '3.13'",

    "transformers>=4.10.0,<5.0.0;  python_version < '3.8'",
    "transformers>=4.20.0,<5.0.0;  python_version >= '3.8'  and python_version < '3.10'",
    "transformers>=4.30.0,<5.0.0;  python_version >= '3.10'",

    "spacy>=3.0.0,<3.5.0;         python_version < '3.8'",
    "spacy>=3.2.0,<4.0.0;         python_version >= '3.8'",

    "faiss-cpu>=1.7.0,<2.0.0",
]

# Computer vision: tensorflow, pillow
img = [
    "tensorflow>=2.4.0,<2.12.0;   python_version < '3.8'",
    "tensorflow>=2.6.0,<2.13.0;   python_version >= '3.8'  and python_version < '3.9'",
    "tensorflow>=2.9.0,<2.15.0;   python_version >= '3.9'  and python_version < '3.10'",
    "tensorflow>=2.10.0,<2.16.0;  python_version >= '3.10' and python_version < '3.11'",
    "tensorflow>=2.12.0,<2.16.0;  python_version >= '3.11' and python_version < '3.12'",
    "tensorflow>=2.13.0,<2.18.0;  python_version >= '3.12' and python_version < '3.13'",
    "tensorflow>=2.13.0,<3.0.0;   python_version >= '3.13'",

    "pillow>=8.0.0,<10.0.0;       python_version < '3.8'",
    "pillow>=9.0.0,<10.0.0;       python_version >= '3.8'  and python_version < '3.10'",
    "pillow>=9.0.0,<11.0.0;       python_version >= '3.10' and python_version < '3.12'",
    "pillow>=10.0.0,<11.0.0;      python_version >= '3.12'",
]

# Utility packages
utils = [
    "tqdm>=4.50.0,<5.0.0",
    "PyJWT>=2.0.0,<3.0.0",
]

# Development and testing
dev = [
    "pytest>=6.0.0,<9.0.0",
    "pytest-cov>=2.10.0,<6.0.0",
]

# Everything
all = [
    "scomp-link[nlp,img,utils]",
]

[project.urls]
Homepage = "https://github.com/GiacomoSaccaggi/scomp-link"
Documentation = "https://github.com/GiacomoSaccaggi/scomp-link#readme"
Repository = "https://github.com/GiacomoSaccaggi/scomp-link"
Issues = "https://github.com/GiacomoSaccaggi/scomp-link/issues"

# ── Setuptools configuration ──

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scomp_link*"]

[tool.setuptools.package-data]
scomp_link = ["*.md"]

# ── Pytest configuration ──

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ── Coverage configuration ──

[tool.coverage.run]
source = ["scomp_link"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
