[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scomp-link"
version = "1.2.11"
description = "The Astromech arm for your Python data projects — end-to-end ML toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Saccaggi Giacomo", email = "giacomo.saccaggi@gmail.com"}
]
maintainers = [
    {name = "Saccaggi Giacomo", email = "giacomo.saccaggi@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "machine-learning",
    "data-science",
    "automation",
    "pipeline",
    "automl",
    "scikit-learn",
    "regression",
    "classification",
    "clustering",
    "deep-learning",
    "nlp",
    "text-classification",
    "contrastive-learning",
    "anomaly-detection",
    "time-series",
    "ensemble-learning",
    "hyperparameter-tuning",
    "model-selection",
    "cross-validation",
    "feature-selection",
    "bert",
    "transformers",
    "tensorflow",
    "pytorch",
    "computer-vision",
    "image-classification",
    "html-report",
    "plotly",
    "eda",
    "preprocessing",
    "mcp",
    "model-context-protocol",
    "agent-tool",
    "ai-agent",
    "data-drift",
    "html-report",
    "model-serving",
]

# ── All dependencies ──

dependencies = [
    # --- numpy ---
    "numpy>=1.22.0,<2.3.0;    python_version >= '3.10' and python_version < '3.11'",
    "numpy>=1.24.0,<1.27.0;   python_version >= '3.11' and python_version < '3.12'",
    "numpy>=1.26.0,<2.0.0;    python_version >= '3.12' and python_version < '3.13'",
    "numpy>=1.26.0,<3.0.0;    python_version >= '3.13' and python_version < '3.14'",
    "numpy>=2.0.0,<3.0.0;     python_version >= '3.14'",
    # --- pandas ---
    "pandas>=1.4.0,<2.4.0;    python_version >= '3.10' and python_version < '3.11'",
    "pandas>=2.0.0,<2.2.0;    python_version >= '3.11' and python_version < '3.12'",
    "pandas>=2.1.0,<2.3.0;    python_version >= '3.12' and python_version < '3.13'",
    "pandas>=2.1.0,<3.0.0;    python_version >= '3.13' and python_version < '3.14'",
    "pandas>=2.2.0,<3.0.0;    python_version >= '3.14'",
    # --- scipy ---
    "scipy>=1.8.0,<1.12.0;    python_version >= '3.10' and python_version < '3.11'",
    "scipy>=1.10.0,<1.12.0;   python_version >= '3.11' and python_version < '3.12'",
    "scipy>=1.11.0,<1.14.0;   python_version >= '3.12' and python_version < '3.13'",
    "scipy>=1.11.0,<2.0.0;    python_version >= '3.13' and python_version < '3.14'",
    "scipy>=1.14.0,<2.0.0;    python_version >= '3.14'",
    # --- scikit-learn ---
    "scikit-learn>=1.2.0,<1.8.0;   python_version >= '3.10' and python_version < '3.11'",
    "scikit-learn>=1.3.0,<1.5.0;   python_version >= '3.11' and python_version < '3.12'",
    "scikit-learn>=1.3.0,<1.6.0;   python_version >= '3.12' and python_version < '3.13'",
    "scikit-learn>=1.3.0,<2.0.0;   python_version >= '3.13' and python_version < '3.14'",
    "scikit-learn>=1.5.0,<2.0.0;   python_version >= '3.14'",
    # --- matplotlib ---
    "matplotlib>=3.6.0,<3.9.0;    python_version >= '3.10' and python_version < '3.11'",
    "matplotlib>=3.7.0,<3.9.0;    python_version >= '3.11' and python_version < '3.12'",
    "matplotlib>=3.8.0,<3.11.0;   python_version >= '3.12' and python_version < '3.13'",
    "matplotlib>=3.8.0,<4.0.0;    python_version >= '3.13' and python_version < '3.14'",
    "matplotlib>=3.9.0,<4.0.0;    python_version >= '3.14'",
    # --- plotly ---
    "plotly>=5.0.0,<6.0.0",
    # --- seaborn ---
    "seaborn>=0.11.0,<0.14.0",
    # --- NLP: torch, transformers, spacy, faiss, sentence-transformers ---
    "torch>=1.13.0,<2.13.0;       python_version >= '3.10' and python_version < '3.11'",
    "torch>=2.0.0,<2.13.0;        python_version >= '3.11' and python_version < '3.12'",
    "torch>=2.0.0,<2.13.0;        python_version >= '3.12' and python_version < '3.13'",
    "torch>=2.0.0,<3.0.0;         python_version >= '3.13' and python_version < '3.14'",
    "torch>=2.4.0,<3.0.0;         python_version >= '3.14'",
    "transformers>=4.30.0,<6.0.0",
    "spacy>=3.5.0,<4.0.0",
    "faiss-cpu>=1.7.0,<2.0.0",
    "sentence-transformers>=2.2.0,<6.0.0",
    # --- Computer Vision: tensorflow, pillow ---
    # NOTE: TensorFlow does not yet support Python 3.14 (no wheels available).
    # Tracking issue: https://github.com/tensorflow/tensorflow/issues/102890
    "tensorflow>=2.10.0,<2.16.0;  python_version >= '3.10' and python_version < '3.11'",
    "tensorflow>=2.12.0,<2.16.0;  python_version >= '3.11' and python_version < '3.12'",
    "tensorflow>=2.13.0,<2.18.0;  python_version >= '3.12' and python_version < '3.13'",
    "tensorflow>=2.13.0,<3.0.0;   python_version >= '3.13' and python_version < '3.14'",
    "pillow>=9.0.0,<13.0.0;        python_version >= '3.10' and python_version < '3.12'",
    "pillow>=10.0.0,<13.0.0;      python_version >= '3.12'",
    # --- Anomaly Detection: pytorch-tabnet, statsmodels ---
    "pytorch-tabnet2>=4.1.0,<5.0.0",
    "statsmodels>=0.13.0,<1.0.0",
    # --- Keras compat ---
    "tf-keras>=2.16.0;  python_version >= '3.12' and python_version < '3.14'",
    # --- polars ---
    "polars>=0.20.0,<2.0.0",
    "pyarrow>=12.0.0",
    # --- Explainability ---
    "shap>=0.42.0,<1.0.0",
    "lime>=0.2.0,<1.0.0",
    # --- Advanced Tuning ---
    "optuna>=3.0.0,<5.0.0",
    # --- Utilities ---
    "tqdm>=4.50.0,<5.0.0",
    "PyJWT>=2.0.0,<3.0.0",
    # --- PDF conversion ---
    "markdown>=3.3.0,<4.0.0",
    "weasyprint>=57.0,<70.0",
    "playwright>=1.40.0,<2.0.0",
]

[project.scripts]
scomp-link = "scomp_link.cli:main"

# ── Optional dependency groups (dev only) ──

[project.optional-dependencies]

# Development and testing
dev = [
    "pytest>=6.0.0,<9.0.0",
    "pytest-cov>=2.10.0,<6.0.0",
    "pre-commit>=3.0.0,<5.0.0",
]

# MCP server for AI agent integration
mcp = [
    "mcp>=1.0.0,<2.0.0",
]

# REST API serving
serve = [
    "flask>=2.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://giacomosaccaggi.github.io/scomp_link/"
Documentation = "https://github.com/GiacomoSaccaggi/scomp_link/wiki"
Repository = "https://github.com/GiacomoSaccaggi/scomp_link"
Issues = "https://github.com/GiacomoSaccaggi/scomp_link/issues"
Changelog = "https://github.com/GiacomoSaccaggi/scomp_link/blob/main/CHANGELOG.md"

# ── Setuptools configuration ──

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scomp_link*"]

[tool.setuptools.package-data]
scomp_link = ["*.md"]

# ── Pytest configuration ──

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ── Coverage configuration ──

[tool.coverage.run]
source = ["scomp_link"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 25

# ── Ruff configuration ──

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F401", "E402", "W605"]

[tool.ruff.format]
quote-style = "double"
